--- a/src/website/resources/views/index.vm
+++ b/src/website/resources/views/index.vm
@@ -183,7 +183,7 @@
     <section id="features" class="features section">
         <div class="container text-center">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/ePbKGoIGAXY"></iframe>
+                <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/sPlhKP0nZII"></iframe>
             </div>
         </div><!--//container-->
     </section><!--//features-->
