website: views: index: fix twitter follow link

--- a/src/website/resources/views/index.vm
+++ b/src/website/resources/views/index.vm
@@ -93,7 +93,7 @@
         <div class="social-media">
             <div class="social-media-inner container text-center">
                 <ul class="list-inline">
-                    <li class="twitter-follow"><a href="https://twitter.com/EPITA" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
+                    <li class="twitter-follow"><a href="https://twitter.com/EPITA" class="twitter-follow-button" data-show-count="false">Follow @EPITA</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </li><!--//twitter-follow-->
 
