--- a/src/website/resources/views/index.vm
+++ b/src/website/resources/views/index.vm
@@ -14,10 +14,10 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
-    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/dependencies/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="assets/plugins/prism/prism.css">
+    <link rel="stylesheet" href="assets/dependencies/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="assets/dependencies/prism/prism.css">
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="/assets/css/styles.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -282,11 +282,11 @@
     </footer><!--//footer-->
 
     <!-- Javascript -->
-    <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/prism/prism.js"></script>
+    <script type="text/javascript" src="assets/dependencies/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="assets/dependencies/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="assets/dependencies/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/dependencies/jquery-scrollTo/jquery.scrollTo.min.js"></script>
+    <script type="text/javascript" src="assets/dependencies/prism/prism.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
