--- a/src/website/resources/views/index.vm
+++ b/src/website/resources/views/index.vm
@@ -16,8 +16,8 @@
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/dependencies/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="assets/dependencies/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="assets/dependencies/prism/prism.css">
+    <link rel="stylesheet" href="assets/dependencies/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/dependencies/prism/min/prism.css">
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="/assets/css/styles.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -286,7 +286,7 @@
     <script type="text/javascript" src="assets/dependencies/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="assets/dependencies/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/dependencies/jquery-scrollTo/jquery.scrollTo.min.js"></script>
-    <script type="text/javascript" src="assets/dependencies/prism/prism.js"></script>
+    <script type="text/javascript" src="assets/dependencies/prism/min/prism-min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
