website: fix typo and update description

--- a/src/website/resources/views/about.vm
+++ b/src/website/resources/views/about.vm
@@ -47,7 +47,7 @@
                 </div>
                 <div class="content">
                     <h3 class="sub-title">Open-source and free</h3>
-                    <p>LyrLand is completely free and open-source. You can get the code on <a href="http://github.com/paveyry/LyreLand">Github</a> and modify it as you like.</p>
+                    <p>LyreLand is completely free and open-source. You can get the code on <a href="http://github.com/paveyry/LyreLand">Github</a> and modify it as you like.</p>
                 </div><!--//content-->
             </div><!--//item-->
             <div class="item col-md-4 col-sm-6 col-xs-12">
