--- a/src/website/resources/views/index.vm
+++ b/src/website/resources/views/index.vm
@@ -133,7 +133,7 @@
                 </div><!--//info-->
                 <div class="cta-container">
                     <div class="speech-bubble">
-                        <p class="intro">If you like LyreLand, you can show your support and buy us a a beer or coffee.</p>
+                        <p class="intro">If you like LyreLand, you can show your support and buy us a beer or a coffee.</p>
                         <div class="icon-holder  text-center"><i class="fa fa-smile-o"></i></div>
                     </div><!--//speech-bubble-->
                 </div><!--//cta-container-->
